--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 node_modules
 npm-debug.log
 tmp
+
+### Example user template template
+### Example user template
+
+# IntelliJ project files
+.idea
+*.iml
+out
+gen
+
